[package]
name = "imgclip"
version = "0.1.0"
authors = ["kavorite <iseurie@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon", "std"] }
reqwest = { version = "0.10", features = ["blocking"] }
png = "0.16"
crossbeam-channel = "0.4"
lazy_static = "1.4"
