[package]
name = "imgclip"
version = "0.1.0"
authors = ["kavorite <iseurie@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
image = "0.23"
crossbeam-channel = "0.4"
lazy_static = "1.4"
winrt-notification = "0.2"

[dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "errhandlingapi",
    "winerror",
    "libloaderapi",
    "winbase",
    "std"
]
