[package]
name = "imgclip"
version = "0.1.0"
authors = ["kavorite <iseurie@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4"
image             = "0.23"
lazy_static       = "1.4"
serde             = "1.0"
serde_derive      = "1.0"

[dependencies.reqwest]
version  = "0.10"
features = ["blocking", "json"]

[dependencies.winapi]
version  = "0.3"
features = [
    "errhandlingapi",
    "libloaderapi",
    "std",
    "winbase",
    "winerror",
    "winuser",
]
